fixed FF collapse for longpress and pulled longpress list out of iframe

--- a/src/modules/longpress/main.styl
+++ b/src/modules/longpress/main.styl
@@ -10,10 +10,12 @@ ul.longpress
 	text-align center
 	border-top-left-radius 12px
 	border-top-right-radius 12px
+	white-space normal
 
 	&.active
 		height auto
 		padding 6px
+		margin 0 10px
 
 	li
 		display inline-block
